# arms

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yaml
.github/workflows/: auto_tag.yaml  run_precommit.yaml
arms/confluence/: api.py  creds.py  endpoints.py  exc.py  patcher.py  transfer.py  typedefs.py  types.py  utils.py
arms/confluence/models/: ancestor.py  attachment.py  base.py  errors.py  page.py  space.py  user.py
arms/googleapi/: typedefs.py  types.py
arms/googleapi/facades/: drive.py  sheets.py
arms/googleapi/helpers/: drive.py  factory.py  sheets.py
arms/googleapi/payloads/: drive.py  enums.py  sheets.py
