[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "arms"
version = "v0.0.0"
description = ""
authors = ["Lawrence <lawrence@cinnamon.is>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
aiohttp = "^3.10.10"
aiofiles = "^24.1.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"

google-api-python-client = { version = "^2.151.0", optional = true }
google-auth-oauthlib = { version = "^1.2.1", optional = true }

[tool.poetry.extras]
google = ["google-api-python-client", "google-auth-oauthlib"]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
google-api-python-client-stubs = "^1.28.0"

[tool.setuptools.package-data]
arms = ["py.typed"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff]
line-length = 79

[tool.mypy]
python_version = "3.11"
files = ["arms", "tests"]
check_untyped_defs = true
disallow_untyped_defs = true  # for strict mypy: (this is the tricky one :-))
disallow_untyped_calls = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
