[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "arms"
dynamic = ["version"]
description = "Handmade 3rd-party implementations."
authors = [
    {name = "Lawrence", email = "lawrence@cinnamon.is"},
]
dependencies = ["aiohttp>=3.10.10", "aiofiles>=24.1.0", "pydantic>=2.9.2", "pydantic-settings>=2.6.1"]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.151.0",
    "google-auth-oauthlib>=1.2.1",
]
arms = ["py.typed"]

[tool.pdm]
use_scm = true
distribution = true

[dependency-groups]
dev = ["mypy>=1.13.0", "google-api-python-client-stubs>=1.28.0"]

[tool.setuptools.package-data]
arms = ["py.typed"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # any-type
    "C901",  # complex-structure
    "D100",  # undocumented-public-module
    "D101",  # undocumented-public-class
    "D102",  # undocumented-public-method
    "D103",  # undocumented-public-function
    "D104",  # undocumented-public-package
    "D105",  # undocumented-magic-method
    "D106",  # undocumented-public-nested-class
    "D107",  # undocumented-public-init
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "EM101",  # raw-string-in-exception
    "EM102",  # f-string-in-exception
    "FA102",  # future-required-type-annotation
    "FIX002",  # line-contains-todo
    "N815",  # mixed-case-variable-in-class-scope
    "PLR0911",  # too-many-return-statements
    "PLR0913",  # too-many-arguments
    "RUF001",  # ambiguous-unicode-character-string
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "TID252",  # relative-imports
    "TRY003",  # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
  "S101",  # assert
]

[tool.mypy]
python_version = "3.11"
files = ["arms"]
check_untyped_defs = true
disallow_untyped_defs = true  # for strict mypy: (this is the tricky one :-))
disallow_untyped_calls = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pdm.scripts]
lint = "ruff check --fix"
